pkg/plugins/runtime/gateway/testdata/05-gateway-route.yaml
Clusters:
  Resources: {}
Endpoints:
  Resources: {}
Listeners:
  Resources:
    edge-gateway:HTTP:8080:
      address:
        socketAddress:
          address: 192.168.1.1
          portValue: 8080
      filterChains:
      - filters:
        - name: envoy.filters.network.http_connection_manager
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
            commonHttpProtocolOptions:
              headersWithUnderscoresAction: REJECT_REQUEST
              idleTimeout: 300s
            http2ProtocolOptions:
              allowConnect: true
              initialConnectionWindowSize: 1048576
              initialStreamWindowSize: 65536
              maxConcurrentStreams: 100
            httpFilters:
            - name: envoy.filters.http.router
            mergeSlashes: true
            normalizePath: true
            rds:
              configSource:
                ads: {}
                resourceApiVersion: V3
              routeConfigName: edge-gateway:HTTP:8080
            requestHeadersTimeout: 0.500s
            serverName: Kuma Gateway
            statPrefix: gateway-default
            streamIdleTimeout: 5s
            stripAnyHostPort: true
      listenerFilters:
      - name: envoy.filters.listener.tls_inspector
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
      name: edge-gateway:HTTP:8080
      perConnectionBufferLimitBytes: 32768
      reusePort: true
      trafficDirection: INBOUND
Routes:
  Resources:
    edge-gateway:HTTP:8080:
      name: edge-gateway:HTTP:8080
      requestHeadersToRemove:
      - x-kuma-tags
      validateClusters: false
      virtualHosts:
      - domains:
        - echo.example.com
        name: edge-gateway:HTTP:8080:echo.example.com
        routes:
        - match:
            prefix: /
          route:
            weightedClusters:
              totalWeight: 0
        - match:
            path: /
          redirect:
            hostRedirect: example.com
            responseCode: FOUND
            schemeRedirect: https
            stripQuery: true
Runtimes:
  Resources: {}
Secrets:
  Resources: {}
